--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "course": "CSE40-TODO",
     "assignment": "HO0",
     "server": "http://lighthouse.soe.ucsc.edu",
-    "user": "sslug@ucsc.edu",
-    "pass": "1234567890"
+    "user": "acrichmo@ucsc.edu",
+    "pass": "f9064328acd70a32c4dcfdc444896a5f"
 }
