--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "course": "CSE40-TODO",
+    "course": "cse40-f25-hao",
     "assignment": "HO0",
     "server": "http://lighthouse.soe.ucsc.edu",
     "user": "acrichmo@ucsc.edu",
